# kintrol

./: CMakeLists.txt  README.md  package.xml
action/: TrajectoryExecution.action
include/kintrol/: kinematic_utilities.h  kintrol.h  kintrol_parameters.h  kintroller_manager.h  low_pass_filter.h  trajectory_pub.h
include/kintrol/kintrollers/: kintroller.h  positioner_kintroller.h
kintrol_test/: CMakeLists.txt  package.xml
kintrol_test/config/: coordinated_traj.yaml  kintrol_test.yaml  multi_robot_traj_exec.yaml  trajectory_execution.yaml
kintrol_test/launch/: coordinated_trajectory_test.launch  hydra_moveit_cpp_bringup.launch  kintrol_test.launch  multi_modal.launch  multi_robot_traj_exec.launch  trajectory_execution_test.launch
kintrol_test/scripts/: coordinated_trajectory_test.py  multi_modal_test.py  multi_robot_trajectory_test.py  trajectory_test.py
kintrol_test/src/: kintrol_test.cpp  temp_pos_controller.cpp
scripts/: scurve_trajectory.py
src/: kinematic_utilities.cpp  kintrol.cpp  kintrolV2.cpp  kintrol_server.cpp  kintroller_manager.cpp  low_pass_filter.cpp  multi_robot_trajectory_test.cpp  my_test.cpp  top_level_node.cpp  trajectory_execution_server.cpp  trajectory_execution_serverV2.cpp  trajectory_pub.cpp  trajectory_pub_node.cpp
src/kintrollers/: kintroller.cpp  positioner_kintroller.cpp
srv/: SetIdleSetpoint.srv  SwitchKintroller.srv
