<?xml version="1.0"?>
<package format="2">
  <name>kintrol</name>
  <version>0.1.0</version>
  <description>package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>std_msgs</depend>
</package>
