<?xml version="1.0"?>
<package format="2">
  <name>kintrol</name>
  <version>0.1.0</version>
  <description>package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>eigen_conversions</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>std_msgs</depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
