<?xml version="1.0"?>
<package format="2">
  <name>kintrol_tests</name>
  <version>0.1.0</version>
  <description>kintrol tests</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>kintrol</depend>
</package>
